Working Bounding Box Travel App :D

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,12 @@
         android:label="learning_apps"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- TODO: Add your Google Maps API key here -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyC9w3rywXuD4hZB5niKTiJqSSeU1agI8w0"/>
+        <uses-permission android:name=”android.permission.ACCESS_FINE_LOCATION” />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
