Update git ignore to remove the secrets.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Secrets Contained Here
+android/app/src/main/AndroidManifest.xml
+ios/Runner/AppDelegate.swift
+web/index.html
