--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,7 @@
         {
             "name": "learning_apps",
             "request": "launch",
-            "type": "dart",
-            "args": ["-d", "emulator-5554"]
+            "type": "dart"
         },
         {
             "name": "My google pixel 3",
@@ -20,8 +19,7 @@
             "name": "learning_apps (profile mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile",
-            "args": ["-d", "emulator-5554"]
+            "flutterMode": "profile"
         }
 
     ]
