--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # english_words: ^4.0.0
+
+  flutter_config: ^2.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   google_maps_flutter: ^2.1.1
   google_maps_flutter_web: ^0.3.2+1
+  http: ^0.13.4
+  location: ^4.2.0
 
 dev_dependencies:
   flutter_test:
