--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_maps_flutter_web: ^0.3.2+1
   http: ^0.13.4
   location: ^4.2.0
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
