--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   google_maps_flutter_web: ^0.3.2+1
   http: ^0.13.4
-  location: ^4.2.0
+  # location: ^4.2.0
   sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
