--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.4
   # location: ^4.2.0
   sliding_up_panel: ^2.0.0+1
+  screenshot: ^1.2.3
 
 dev_dependencies:
   flutter_test:
